# quizz-app

./: .buildinfo  .buildinfo.bak  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  api.html  docker-compose.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: api.doctree  environment.pickle  index.doctree
.github/workflows/: code-analysis.yml  docs.yml  release.yml  test.yml
_modules/: index.html
_modules/quizapp/: cli.html
_sources/: api.rst.txt
docs/source/: conf.py  index.rst
docs/tutorials/: tutorial.md
src/quizapp/: __init__.py  cli.py  quiz_data.json
tests/: test_cli.py  test_quiz.py
