[tool.poetry]
name = "quizz-app"
version = "0.1.0"
description = "A small CLI quiz about Machine Learning basics and Deep Learning built with Poetry"
authors = ["tahamuzammil100@gmail.com"]
license = "MIT"
readme = "README.md"
packages = [{ include = "quizapp", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
pytest = "^7.4.0"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
quizapp = "quizapp.cli:main"

[[tool.poetry.include]]
path = "src/quizapp/quiz_data.json"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
